--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,9 +1,9 @@
 {
   "manifest_version": 3,
 
-  "name": "ChatGPT Word Book",
-  "description": "ChatGPT Word Book",
-  "version": "1.03",
+  "name": "GPT Word Book",
+  "description": "GPT Word Book: help you translate and learn new words",
+  "version": "1.4",
 
   "options_ui": {
     "page": "options.html"
