--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "copy-webpack-plugin": "^9.0.1",
     "css-loader": "^6.7.3",
     "css-modules-typescript-loader": "^4.0.1",
+    "file-loader": "^6.2.0",
     "glob": "^7.1.6",
     "jest": "^27.2.1",
     "jss": "^10.10.0",
@@ -38,6 +39,7 @@
     "ts-jest": "^27.0.5",
     "ts-loader": "^8.0.0",
     "typescript": "^4.4.3 ",
+    "url-loader": "^4.1.1",
     "webpack": "^5.76.0",
     "webpack-cli": "^4.0.0",
     "webpack-merge": "^5.0.0"
